--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -1,10 +1,18 @@
 node {
    def commit_id
+
    stage('Preparation') {
      checkout scm
      sh "git rev-parse --short HEAD > .git/commit-id"                        
      commit_id = readFile('.git/commit-id').trim()
+     
    }
+
+   stage('pre-test') {
+     print "hello world"
+     sh "cat ./git/commit-id"
+   }
+   
    stage('test') {
      nodejs(nodeJSInstallationName: 'nodejs') {
        sh 'npm install --only=dev'
@@ -16,4 +24,6 @@ node {
        def app = docker.build("rubyan/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
+
+   
 }
